changed color scheme of all other pages

--- a/index.html
+++ b/index.html
@@ -424,17 +424,21 @@
 
         <div class="grid-3">
           <article class="card">
-            <div class="card-title">Organizational Redesign</div>
-            <p class="card-body">
-              Align structure, people, and processes for resilience and agility.
-            </p>
+            <a href="organizational-redesign.html" style="text-decoration: none; color: inherit;">
+              <div class="card-title">Organizational Redesign</div>
+              <p class="card-body">
+                Align structure, people, and processes for resilience and agility.
+              </p>
+            </a>
           </article>
 
           <article class="card">
-            <div class="card-title">Strategy &amp; Operations</div>
-            <p class="card-body">
-              Corporate strategy. Interim management. Lean improvements that minimize waste and maximize efficiency.
-            </p>
+            <a href="strategy-operations.html" style="text-decoration: none; color: inherit;">
+              <div class="card-title">Strategy &amp; Operations</div>
+              <p class="card-body">
+                Corporate strategy. Interim management. Lean improvements that minimize waste and maximize efficiency.
+              </p>
+            </a>
           </article>
 
           <article class="card">
@@ -456,10 +460,12 @@
           </article>
 
           <article class="card">
-            <div class="card-title">Human Capital &amp; Change Management</div>
-            <p class="card-body">
-              Strengthen engagement, accelerate adoption, and lead with purpose.
-            </p>
+            <a href="human-capital.html" style="text-decoration: none; color: inherit;">
+              <div class="card-title">Human Capital &amp; Change Management</div>
+              <p class="card-body">
+                Strengthen engagement, accelerate adoption, and lead with purpose.
+              </p>
+            </a>
           </article>
         </div>
       </div>
