--- a/strategy-operations.html
+++ b/strategy-operations.html
@@ -231,16 +231,137 @@
       </div>
     </section>
 
-    <!-- Content sections will be added here -->
+    <!-- FROM VISION TO EXECUTION -->
+    <section class="section section-alt">
+      <div class="section-inner">
+        <div class="section-header">
+          <div class="section-kicker">The Foundation</div>
+          <h2 class="section-title">From Vision to Execution — Building Organizations That Think Strategically and Operate Efficiently</h2>
+        </div>
+        <p class="section-subtitle" style="max-width: 50rem;">
+          3N Consulting's Strategy & Operations practice helps organizations define where they want to go — and build the operational discipline to get there. We partner with executives, boards, and public leaders to translate ambition into structured, achievable results. Our methodology integrates corporate strategy, financial analysis, organizational design, and Lean operational transformation — giving decision-makers clarity, alignment, and measurable performance improvement.
+        </p>
+      </div>
+    </section>
+
+    <!-- CORPORATE & GROWTH STRATEGY -->
     <section class="section">
       <div class="section-inner">
         <div class="section-header">
-          <div class="section-kicker">Coming Soon</div>
-          <h2 class="section-title">Content will be added</h2>
+          <div class="section-kicker">Strategic Direction</div>
+          <h2 class="section-title">Corporate &amp; Growth Strategy</h2>
+        </div>
+        <p class="section-subtitle">
+          Every successful organization begins with a clear sense of purpose — but success depends on transforming that purpose into an actionable plan. 3N Consulting helps leaders sharpen strategic direction through rigorous analysis and pragmatic execution planning. We conduct market, competitive, and stakeholder assessments to define where an organization can grow most effectively — identifying core strengths, adjacent opportunities, and potential risks.
+        </p>
+        <p class="section-subtitle" style="margin-top: 1rem;">
+          Our consultants bring decades of experience advising Fortune 500 corporations, state institutions, and private enterprises on strategic planning, portfolio optimization, and performance alignment. We guide leadership teams in setting clear goals, prioritizing initiatives, and developing operating models that connect long-term strategy with day-to-day performance.
+        </p>
+      </div>
+    </section>
+
+    <!-- MERGERS, ACQUISITIONS & INTEGRATION -->
+    <section class="section section-alt">
+      <div class="section-inner">
+        <div class="section-header">
+          <div class="section-kicker">Growth Through Integration</div>
+          <h2 class="section-title">Mergers, Acquisitions &amp; Organizational Integration</h2>
+        </div>
+        <p class="section-subtitle">
+          Growth often requires change — and change demands precision. 3N Consulting supports clients through the full M&amp;A lifecycle, from strategic due diligence and synergy assessment to post-merger integration and value capture. We help acquirers identify operational and cultural risks early, establish integration governance, and build alignment across teams and systems.
+        </p>
+        <p class="section-subtitle" style="margin-top: 1rem;">
+          Our M&amp;A advisors combine financial and operational expertise to ensure that every transaction delivers sustained value — not just a completed deal. Whether advising private equity portfolios, institutional expansions, or strategic partnerships, we focus on integrating vision, structure, and execution into one cohesive growth strategy.
+        </p>
+      </div>
+    </section>
+
+    <!-- OPERATIONAL EXCELLENCE & LEAN TRANSFORMATION -->
+    <section class="section">
+      <div class="section-inner">
+        <div class="section-header">
+          <div class="section-kicker">Continuous Improvement</div>
+          <h2 class="section-title">Operational Excellence &amp; Lean Transformation</h2>
+        </div>
+        <p class="section-subtitle">
+          Strategy without disciplined execution is just intent. 3N Consulting's operational practice is built on Lean principles — emphasizing continuous improvement, waste reduction, and performance transparency across processes and functions. We assess how work gets done, identify inefficiencies, and design workflows that deliver more value with less effort.
+        </p>
+        <p class="section-subtitle" style="margin-top: 1rem;">
+          Our team helps clients create a culture of continuous improvement through practical tools such as value stream mapping, process standardization, performance dashboards, and KPI alignment. We emphasize measurable outcomes: shorter cycle times, improved quality, lower costs, and stronger accountability. Beyond process redesign, we help leaders sustain gains through governance structures, communication plans, and workforce engagement models that embed operational discipline at every level.
+        </p>
+      </div>
+    </section>
+
+    <!-- KEY CAPABILITIES -->
+    <section class="section section-alt">
+      <div class="section-inner">
+        <div class="section-header">
+          <div class="section-kicker">Our Expertise</div>
+          <h2 class="section-title">Strategic & Operational Excellence</h2>
           <p class="section-subtitle">
-            Detailed information about Strategy & Operations services will be populated here.
+            Our Strategy &amp; Operations practice encompasses:
           </p>
         </div>
+
+        <div class="grid-3">
+          <article class="card">
+            <h3 class="card-title">Corporate Strategy</h3>
+            <p class="card-body">
+              Market analysis, competitive assessment, and strategic planning that drives growth and competitive advantage.
+            </p>
+          </article>
+
+          <article class="card">
+            <h3 class="card-title">Financial Analysis</h3>
+            <p class="card-body">
+              Performance modeling, cost analysis, and financial planning that supports strategic decision-making.
+            </p>
+          </article>
+
+          <article class="card">
+            <h3 class="card-title">Organizational Design</h3>
+            <p class="card-body">
+              Structure optimization and talent alignment that enable effective strategy execution.
+            </p>
+          </article>
+
+          <article class="card">
+            <h3 class="card-title">Lean Transformation</h3>
+            <p class="card-body">
+              Value stream mapping, process redesign, and waste elimination for continuous improvement.
+            </p>
+          </article>
+
+          <article class="card">
+            <h3 class="card-title">M&amp;A Advisory</h3>
+            <p class="card-body">
+              Due diligence, integration planning, and value capture across the full M&amp;A lifecycle.
+            </p>
+          </article>
+
+          <article class="card">
+            <h3 class="card-title">Performance Management</h3>
+            <p class="card-body">
+              KPI development, dashboarding, and governance structures that drive accountability and results.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- INTEGRATED APPROACH -->
+    <section class="section">
+      <div class="section-inner">
+        <div class="section-header">
+          <div class="section-kicker">Our Distinction</div>
+          <h2 class="section-title">Integrated Approach &amp; Lasting Value</h2>
+        </div>
+        <p class="section-subtitle">
+          What distinguishes 3N Consulting is our ability to bridge strategic intent and operational reality. Our Strategy &amp; Operations team brings together former executives, management consultants, and industry specialists who understand both the boardroom and the front line. We combine analytical rigor with a deep respect for organizational culture — ensuring that every transformation is not only efficient, but sustainable.
+        </p>
+        <p class="section-subtitle" style="margin-top: 1rem;">
+          By integrating strategic planning, operational excellence, and financial insight, we enable clients to make better decisions, execute with confidence, and achieve measurable impact. From corporate transformations and higher education modernization to government efficiency initiatives, our clients trust 3N Consulting to help them think boldly, operate efficiently, and deliver results that last.
+        </p>
       </div>
     </section>
 
