--- a/human-capital.html
+++ b/human-capital.html
@@ -231,16 +231,94 @@
       </div>
     </section>
 
-    <!-- Content sections will be added here -->
+    <!-- HUMAN CAPITAL -->
+    <section class="section section-alt">
+      <div class="section-inner">
+        <div class="section-header">
+          <div class="section-kicker">Human Capital</div>
+          <h2 class="section-title">Empowering People to Drive Performance</h2>
+          <p class="section-subtitle">
+            At 3N Consulting, we believe that organizational transformation succeeds or fails on one factor above all others — people. Our Human Capital practice helps organizations align their workforce, leadership, and culture with strategic goals to achieve measurable improvements in performance, engagement, and service delivery.
+          </p>
+        </div>
+        <p style="color: #4b5563; line-height: 1.7; font-size: 0.98rem; margin-top: 1rem;">
+          We partner with clients to design human capital strategies that unlock potential at every level of the organization — ensuring that talent, structure, and leadership are not just managed, but purposefully aligned to mission and results. Our approach combines quantitative analysis, behavioral insight, and organizational design to create workplaces that perform better, communicate more effectively, and adapt more confidently to change.
+        </p>
+      </div>
+    </section>
+
+    <!-- STRATEGIC WORKFORCE PLANNING -->
     <section class="section">
       <div class="section-inner">
         <div class="section-header">
-          <div class="section-kicker">Coming Soon</div>
-          <h2 class="section-title">Content will be added</h2>
+          <h2 class="section-title">Strategic Workforce Planning & Talent Optimization</h2>
           <p class="section-subtitle">
-            Detailed information about Human Capital & Change Management services will be populated here.
+            3N Consulting helps organizations build the right workforce for the future. Through strategic workforce planning, we identify critical roles, assess skill gaps, and design data-informed strategies to ensure that staffing aligns with both short-term priorities and long-term growth.
           </p>
         </div>
+        <p style="color: #4b5563; line-height: 1.7; font-size: 0.98rem; margin-top: 1rem;">
+          Our consultants develop frameworks for recruitment, retention, and succession planning that balance efficiency with equity — ensuring continuity, capability, and inclusivity across the enterprise. We also help clients define clear competency models and performance expectations, building transparency and accountability into the talent lifecycle. The result is a workforce strategy that supports operational agility and strengthens the organization's ability to execute its mission.
+        </p>
+      </div>
+    </section>
+
+    <!-- LEADERSHIP & ORGANIZATIONAL DEVELOPMENT -->
+    <section class="section section-alt">
+      <div class="section-inner">
+        <div class="section-header">
+          <h2 class="section-title">Leadership & Organizational Development</h2>
+          <p class="section-subtitle">
+            Strong leadership drives every successful transformation. 3N's leadership development programs focus on building strategic capacity, emotional intelligence, and decision-making discipline among executives and emerging leaders alike.
+          </p>
+        </div>
+        <p style="color: #4b5563; line-height: 1.7; font-size: 0.98rem; margin-top: 1rem;">
+          We work with management teams to clarify leadership roles, streamline decision structures, and strengthen communication across levels of the organization. Our methodology blends executive coaching, team alignment sessions, and performance feedback loops to ensure that leaders are not only empowered to lead change — but equipped to sustain it. The outcome is a culture of trust, clarity, and accountability that accelerates performance improvement and fosters long-term engagement.
+        </p>
+      </div>
+    </section>
+
+    <!-- CULTURE, ENGAGEMENT & CHANGE MANAGEMENT -->
+    <section class="section">
+      <div class="section-inner">
+        <div class="section-header">
+          <h2 class="section-title">Culture, Engagement & Change Management</h2>
+          <p class="section-subtitle">
+            An organization's culture defines how strategy becomes reality. We assess and strengthen workplace culture to ensure it supports collaboration, inclusion, and innovation.
+          </p>
+        </div>
+        <p style="color: #4b5563; line-height: 1.7; font-size: 0.98rem; margin-top: 1rem;">
+          3N's consultants design targeted engagement strategies that improve communication, reduce turnover, and align employees around shared goals. When major change occurs — whether structural, digital, or strategic — we apply a proven change management framework that prioritizes transparency, readiness, and adoption. By understanding how people experience change, we help leaders minimize resistance, sustain momentum, and embed new ways of working that endure beyond the transformation phase.
+        </p>
+      </div>
+    </section>
+
+    <!-- HUMAN CAPITAL ANALYTICS & GOVERNANCE -->
+    <section class="section section-alt">
+      <div class="section-inner">
+        <div class="section-header">
+          <h2 class="section-title">Human Capital Analytics & Governance</h2>
+          <p class="section-subtitle">
+            We integrate data and governance to bring objectivity and discipline to workforce decisions. 3N Consulting helps organizations define and track key performance indicators (KPIs) for human capital management.
+          </p>
+        </div>
+        <p style="color: #4b5563; line-height: 1.7; font-size: 0.98rem; margin-top: 1rem;">
+          We track indicators such as workforce productivity, engagement levels, leadership pipeline health, and training ROI. Through structured governance processes, we ensure that HR policies, compliance systems, and organizational structures operate efficiently and transparently. Our consultants provide insights that enable leadership to make informed, evidence-based decisions — transforming HR from a support function into a strategic partner driving organizational success.
+        </p>
+      </div>
+    </section>
+
+    <!-- LASTING VALUE -->
+    <section class="section">
+      <div class="section-inner">
+        <div class="section-header">
+          <h2 class="section-title">Lasting Value Through People</h2>
+          <p class="section-subtitle">
+            3N Consulting's Human Capital methodology is rooted in a simple truth: performance improves when people are engaged, aligned, and empowered. We combine strategic foresight with practical implementation to help organizations build resilient workforces, high-performing cultures, and leadership teams capable of sustaining excellence.
+          </p>
+        </div>
+        <p style="color: #4b5563; line-height: 1.7; font-size: 0.98rem; margin-top: 1rem;">
+          Whether guiding workforce redesign for public institutions, advising boards on leadership strategy, or supporting organizational change in the private sector, 3N's Human Capital practice delivers what every transformation requires most — people who believe in the mission, and leaders who know how to bring it to life.
+        </p>
       </div>
     </section>
 
