--- a/careers.html
+++ b/careers.html
@@ -17,6 +17,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Service Lines</a></li>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="thought-leadership.html">Thought Leadership</a></li>
