--- a/case-studies.html
+++ b/case-studies.html
@@ -21,6 +21,7 @@
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="thought-leadership.html">Thought Leadership</a></li>
+                    <li><a href="disclaimers.html">Disclaimers</a></li>
                 </ul>
             </div>
         </div>
