changed format of menu across all pages

--- a/dyan-sellers.html
+++ b/dyan-sellers.html
@@ -217,7 +217,7 @@
         <a href="services.html">Service Lines</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet our Team</a>
+        <a href="thought-leadership.html" class="active">Meet Our Team</a>
         <a href="disclaimers.html">Disclaimers</a>
       </nav>
     </div>
@@ -315,7 +315,7 @@
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet our Team</a>
+        <a href="thought-leadership.html">Meet Our Team</a>
         <a href="disclaimers.html">Disclaimers</a>
       </div>
     </div>
