--- a/manufacturing.html
+++ b/manufacturing.html
@@ -224,7 +224,7 @@
         <a href="services.html">Service Lines</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html">Thought Leadership</a>
+        <a href="thought-leadership.html">Meet Our Team</a>
         <a href="disclaimers.html">Disclaimers</a>
       </nav>
     </div>
