--- a/organizational-redesign.html
+++ b/organizational-redesign.html
@@ -211,7 +211,7 @@
         <a href="services.html">Service Lines</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html">Thought Leadership</a>
+        <a href="thought-leadership.html">Meet Our Team</a>
         <a href="disclaimers.html">Disclaimers</a>
       </nav>
     </div>
@@ -452,7 +452,7 @@
         <a href="about.html">About Us</a>
         <a href="services.html">Service Lines</a>
         <a href="careers.html">Careers</a>
-        <a href="thought-leadership.html">Thought Leadership</a>
+        <a href="thought-leadership.html">Meet Our Team</a>
         <a href="contact.html">Contact Us</a>
         <a href="disclaimers.html">Disclaimers</a>
       </div>
