--- a/rachel-demuth.html
+++ b/rachel-demuth.html
@@ -217,7 +217,7 @@
         <a href="services.html">Service Lines</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Thought Leadership</a>
+        <a href="thought-leadership.html" class="active">Meet Our Team</a>
         <a href="disclaimers.html">Disclaimers</a>
       </nav>
     </div>
@@ -228,7 +228,7 @@
     <section class="hero">
       <div class="hero-inner">
         <div>
-          <div class="hero-eyebrow">Thought Leadership</div>
+          <div class="hero-eyebrow">Meet Our Team</div>
           <h1 class="hero-title">Rachel DeMuth</h1>
           <div class="hero-subtitle">Director, Organizational Design Practice</div>
           <p class="hero-body">
@@ -312,7 +312,7 @@
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Thought Leadership</a>
+        <a href="thought-leadership.html">Meet Our Team</a>
         <a href="disclaimers.html">Disclaimers</a>
       </div>
     </div>
