--- a/thought-leadership.html
+++ b/thought-leadership.html
@@ -109,18 +109,18 @@
                 <p style="text-align: center; color: #4b5563; margin-bottom: 2rem; max-width: 600px; margin-left: auto; margin-right: auto;">Discover more about our talented consulting professionals and their expertise.</p>
                 
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem;">
-                    <a href="rachel-demuth.html" style="text-decoration: none; color: inherit;">
+                    <a href="soorya-rajendran.html" style="text-decoration: none; color: inherit;">
                         <div style="border-radius: 1rem; border: 1px solid #e5e7eb; background: #ffffff; padding: 2rem; text-align: center; box-shadow: 0 12px 30px rgba(15,23,42,0.04); transition: transform 0.15s ease, box-shadow 0.15s ease; cursor: pointer;">
                             <div style="font-size: 3rem; margin-bottom: 1rem; opacity: 0.5;">👤</div>
-                            <h3 style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">Rachel DeMuth</h3>
+                            <h3 style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">Soorya Rajendran</h3>
                             <p style="font-size: 0.9rem; color: #6b7280;">View Profile →</p>
                         </div>
                     </a>
                     
-                    <a href="nick-gupta.html" style="text-decoration: none; color: inherit;">
+                    <a href="dhatri-mulpuri.html" style="text-decoration: none; color: inherit;">
                         <div style="border-radius: 1rem; border: 1px solid #e5e7eb; background: #ffffff; padding: 2rem; text-align: center; box-shadow: 0 12px 30px rgba(15,23,42,0.04); transition: transform 0.15s ease, box-shadow 0.15s ease; cursor: pointer;">
                             <div style="font-size: 3rem; margin-bottom: 1rem; opacity: 0.5;">👤</div>
-                            <h3 style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">Nick Gupta</h3>
+                            <h3 style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">Dhatri Mulpuri</h3>
                             <p style="font-size: 0.9rem; color: #6b7280;">View Profile →</p>
                         </div>
                     </a>
