--- a/nick-gupta.html
+++ b/nick-gupta.html
@@ -217,7 +217,7 @@
         <a href="services.html">Service Lines</a>
         <a href="careers.html">Careers</a>
         <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Thought Leadership</a>
+        <a href="thought-leadership.html" class="active">Meet Our Team</a>
         <a href="disclaimers.html">Disclaimers</a>
       </nav>
     </div>
@@ -228,7 +228,7 @@
     <section class="hero">
       <div class="hero-inner">
         <div>
-          <div class="hero-eyebrow">Thought Leadership</div>
+          <div class="hero-eyebrow">Meet Our Team</div>
           <h1 class="hero-title">Nick Gupta</h1>
           <div class="hero-subtitle">Chief Executive Officer</div>
           <p class="hero-body">
@@ -315,7 +315,7 @@
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Thought Leadership</a>
+        <a href="thought-leadership.html">Meet Our Team</a>
         <a href="disclaimers.html">Disclaimers</a>
       </div>
     </div>
