--- a/solutions.html
+++ b/solutions.html
@@ -20,7 +20,7 @@
                     <li><a href="services.html">Service Lines</a></li>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="thought-leadership.html">Thought Leadership</a></li>
+                    <li><a href="thought-leadership.html">Meet Our Team</a></li>
                 </ul>
             </div>
         </div>
