--- a/thought-leadership.html
+++ b/thought-leadership.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet our Team - 3N Consulting</title>
+    <title>Meet Our Team - 3N Consulting</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
                     <li><a href="services.html">Service Lines</a></li>
                     <li><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="thought-leadership.html">Meet our Team</a></li>
+                    <li><a href="thought-leadership.html">Meet Our Team</a></li>
                     <li><a href="disclaimers.html">Disclaimers</a></li>
                 </ul>
             </div>
