--- a/thought-leadership.html
+++ b/thought-leadership.html
@@ -117,6 +117,14 @@
                         </div>
                     </a>
                     
+                    <a href="anirudh-peesay.html" style="text-decoration: none; color: inherit;">
+                        <div style="border-radius: 1rem; border: 1px solid #e5e7eb; background: #ffffff; padding: 2rem; text-align: center; box-shadow: 0 12px 30px rgba(15,23,42,0.04); transition: transform 0.15s ease, box-shadow 0.15s ease; cursor: pointer;">
+                            <div style="font-size: 3rem; margin-bottom: 1rem; opacity: 0.5;">👤</div>
+                            <h3 style="font-size: 1.1rem; font-weight: 600; margin-bottom: 0.5rem;">Anirudh (Anu) Peesay</h3>
+                            <p style="font-size: 0.9rem; color: #6b7280;">View Profile →</p>
+                        </div>
+                    </a>
+                    
                     <a href="dhatri-mulpuri.html" style="text-decoration: none; color: inherit;">
                         <div style="border-radius: 1rem; border: 1px solid #e5e7eb; background: #ffffff; padding: 2rem; text-align: center; box-shadow: 0 12px 30px rgba(15,23,42,0.04); transition: transform 0.15s ease, box-shadow 0.15s ease; cursor: pointer;">
                             <div style="font-size: 3rem; margin-bottom: 1rem; opacity: 0.5;">👤</div>
