added linkedin link to all pages

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
       </div>
       <img src="images/img.png" alt="Footer Image" class="footer-image">
       <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3nconsultinggroup/" target="_blank">🔗 LinkedIn</a>
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Service Lines</a>
         <a href="careers.html">Careers</a>
