--- a/cio-services.html
+++ b/cio-services.html
@@ -439,7 +439,7 @@
       </div>
       <img src="images/img.png" alt="Footer Image" class="footer-image">
       <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3nconsultinggroup/" target="_blank">🔗 LinkedIn</a>
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
         <a href="contact.html">Contact</a>
         <a href="disclaimers.html">Disclaimers</a>
       </div>
