--- a/dhatri-mulpuri.html
+++ b/dhatri-mulpuri.html
@@ -294,6 +294,7 @@
         <p style="color: #6b7280;">Results. Delivered.</p>
       </div>
       <div class="footer-links">
+        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
