added content for all case studies

--- a/case-studies.html
+++ b/case-studies.html
@@ -279,28 +279,28 @@
                 <div class="case-study-number">1</div>
                 <h3>Organizational Readiness Assessment Methodology (O-RAM) in Action</h3>
                 <p>A comprehensive approach to evaluating organizational preparedness, identifying gaps, and implementing transformative change across complex structures.</p>
-                <a href="#" class="case-study-link">Explore →</a>
+                <a href="o-ram-case-study.html" class="case-study-link">Explore →</a>
             </article>
 
             <article class="case-study-card">
                 <div class="case-study-number">2</div>
                 <h3>Preparing for a Cloud-Based Future</h3>
                 <p>Strategic planning and execution of cloud infrastructure migration, ensuring seamless technology transitions while minimizing operational disruption and maximizing ROI.</p>
-                <a href="#" class="case-study-link">Explore →</a>
+                <a href="cloud-based-future.html" class="case-study-link">Explore →</a>
             </article>
 
             <article class="case-study-card">
                 <div class="case-study-number">3</div>
                 <h3>Reengineering a National Cosmetics Manufacturer for Scalable Growth</h3>
                 <p>A complete operational redesign enabling rapid scaling, improved efficiency, and market expansion while maintaining quality standards and profitability.</p>
-                <a href="#" class="case-study-link">Explore →</a>
+                <a href="cosmetics-manufacturer.html" class="case-study-link">Explore →</a>
             </article>
 
             <article class="case-study-card">
                 <div class="case-study-number">4</div>
                 <h3>From Data Silos to Data Strategy: How 3N Consulting Built a Statewide Analytics Platform to Strengthen Maryland's Educator Pipeline</h3>
                 <p>A transformative data integration project consolidating fragmented systems into a unified analytics platform, enabling data-driven decision-making for educational excellence.</p>
-                <a href="#" class="case-study-link">Explore →</a>
+                <a href="data-silos.html" class="case-study-link">Explore →</a>
             </article>
         </div>
 
