--- a/index.html
+++ b/index.html
@@ -292,9 +292,10 @@
 
         <aside class="hero-media">
           <div class="caps-label">Our work in motion</div>
-          <div style="background:#020617;border-radius:0.9rem;padding:1.5rem;text-align:center;font-size:0.85rem;color:#9ca3af;">
-            Video / animation placeholder
-          </div>
+          <video style="background:#020617;border-radius:0.9rem;width:100%;height:auto;" autoplay loop muted controls>
+            <source src="images/vid/3N Consulting Website Video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
           <div class="badge-row">
             <span class="badge">MD MBE • SBR</span>
             <span class="badge badge-outline">NMSDC Certified MBE</span>
