edited video size

--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
           </div>
           <div class="hero-cta">
             <a href="#" class="btn btn-primary">Discuss your initiative →</a>
-            <a href="case-studies.html" class="btn btn-ghost">View recent case studies</a>
+            <a href="case-studies.html" class="btn btn-primary">View recent case studies</a>
           </div>
         </div>
 
         <aside class="hero-media">
           <div class="caps-label">Our work in motion</div>
-          <video style="background:#020617;border-radius:0.9rem;width:100%;height:auto;" autoplay loop muted>
+          <video style="background:#020617;border-radius:0.9rem;width:170%;height:auto;" autoplay loop muted>
             <source src="images/vid/3N Consulting Website Video.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -359,12 +359,9 @@
     <!-- TESTIMONIALS -->
     <section class="section">
       <div class="section-inner">
-        <div class="section-header" style="display:flex;justify-content:space-between;align-items:baseline;gap:0.75rem;flex-wrap:wrap;">
-          <div>
-            <div class="section-kicker">Client testimonials</div>
-            <h2 class="section-title">What our clients say</h2>
-          </div>
-          <a href="case-studies.html" class="btn btn-ghost">Recent case studies →</a>
+        <div class="section-header">
+          <div class="section-kicker">Client testimonials</div>
+          <h2 class="section-title">What our clients say</h2>
         </div>
         <p class="section-subtitle">
           Our performance is continuously evaluated. Below are excerpts from formal client satisfaction surveys.
