fixed top logo and slogan across all pages

--- a/digital-transformation.html
+++ b/digital-transformation.html
@@ -439,7 +439,7 @@
           <strong>Address:</strong> 6710A Rockledge Drive, Bethesda, MD 20817
         </div>
       </div>
-      <img src="images/img.png" alt="Footer Image" class="footer-image">
+      <img src="images/logos/Certified NMSDC MBE Logo.png" alt="Footer Image" class="footer-image">
       <div class="footer-links">
         <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
         <a href="about.html">About Us</a>
