--- a/data-silos.html
+++ b/data-silos.html
@@ -354,8 +354,14 @@
     <!-- Navigation Header -->
     <header class="site-header">
         <div class="nav-inner">
-            <div class="brand">
-                <img src="images/3nlogo.png" alt="3N Consulting Logo">
+            <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+                <div>
+                    <img src="images/logos/3N Consulting.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
+                </div>
+                <div style="display: flex; flex-direction: column; line-height: 1.1;">
+                    <div style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">3N Consulting</div>
+                    <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+                </div>
             </div>
             <nav class="nav-links">
                 <a href="index.html">Home</a>
