--- a/dyan-sellers.html
+++ b/dyan-sellers.html
@@ -207,8 +207,14 @@
 <div class="site-wrapper">
   <header class="site-header">
     <div class="nav-inner">
-      <div class="brand">
-        <img src="images/3nlogo.png" alt="3N Consulting Logo" style="height: 70px; width: auto; max-width: 250px;">
+      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+        <div>
+          <img src="images/logos/3N Consulting.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
+        </div>
+        <div style="display: flex; flex-direction: column; line-height: 1.1;">
+          <div style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">3N Consulting</div>
+          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+        </div>
       </div>
       <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
       <nav class="nav-links">
@@ -311,6 +317,7 @@
         <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
         <p style="color: #6b7280;">Results. Delivered.</p>
       </div>
+      <img src="images/logos/Certified NMSDC MBE Logo.png" alt="Footer Image" class="footer-image" style="max-width: 150px; height: auto;">
       <div class="footer-links">
         <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
         <a href="index.html">Home</a>
