--- a/procurement.html
+++ b/procurement.html
@@ -214,8 +214,14 @@
 <div class="site-wrapper">
   <header class="site-header">
     <div class="nav-inner">
-      <div class="brand">
-        <img src="images/3nlogo.png" alt="3N Consulting Logo" style="height: 70px; width: auto; max-width: 250px;">
+      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+        <div>
+          <img src="images/logos/3N Consulting.png" alt="3N Consulting Logo" style="height: 90px; width: auto; max-width: 300px;">
+        </div>
+        <div style="display: flex; flex-direction: column; line-height: 1.1;">
+          <div style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">3N Consulting</div>
+          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+        </div>
       </div>
       <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
       <nav class="nav-links">
@@ -442,7 +448,7 @@
           <strong>Address:</strong> 6710A Rockledge Drive, Bethesda, MD 20817
         </div>
       </div>
-      <img src="images/img.png" alt="Footer Image" class="footer-image">
+      <img src="images/logos/Certified NMSDC MBE Logo.png" alt="Footer Image" class="footer-image">
       <div class="footer-links">
         <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">🔗 LinkedIn</a>
         <a href="contact.html">Contact</a>
